
Changed send_email_to function to allow using the user's email as from
address.

Pulled out email to teachers as its own function and used across
comments, incidents and merits.

New CFG option for emailing merits.

Added a generic message from Report for parent access details to their
epfortolio.

Included form tutors as a bcc on messages to parents.



Version ClaSS-0.9.32 release (2011/01/17)
-----------------------------------------

Changed the rating field in categorydef and rating tables from enum to
smallint (patch!!!). New field othertype added.

Converted xmlfilereader function to use simplexml.

RegistrationTutor added as a field to the Student array.

The statementbank js made compatible with TinyMCE.

Added leavers last year column to Enrolments table.

Comment writer limits use of TinyMCE to a single instance (as it fails
with subcomments for unknown reason).

Added personalisation of catdef statements using the same function as
the statementbank.

Fix to the bands date in report_report_profile: should a year field be
added to the stats table?

Added leaving and start date seach option the Custom Groups page in Info.

Added the booking day to a transport's xml for checking one off journeys.

To avoid conflicts with HTML 5 form validation, novalidate added as
attribute to forms using pattern.

The comidsid table has a new field special. Use dpends on comtype and
is implemented now only for clubs.

The clubs have been added to student_view and student_transport
pages. The feetype has been added for billing clubs.

Layout improved of the community_group_edit page.

Have locked all but the current attendance event for users with
worklevel below 0.

Fix to the selectColumn js function which missed the first column in
the table.

Set the date of first application in EntryBook.

Added search by reenrolment status in group_search.

Fix to the editing of community groups so the sessions and charge are
registered first time for a new group.
